[package]
name = "blogback"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
quick-xml = { version = "0.37.0", features = ["serde", "serialize"]}
toml = "0.8.19"
chrono = { version = "0.4.38", features = ["serde"] }
